--- a/packages/renderer/src/view/pages/HomePage/HomePage.css
+++ b/packages/renderer/src/view/pages/HomePage/HomePage.css
@@ -1,17 +1,38 @@
+* {
+  outline: 1px solid red;
+}
+
 .home-page {
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: #fbfbfd;
-  position: fixed;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 
 .main-container {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    flex-basis: 90%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 90%;
+  position: relative;
+
+}
+
+.catalog-wrapper {
+  height: 40;
+}
+
+.catalog-container {
+  display: grid;
+  height: 100vh;
+
+  overflow: scroll;
+  position: absolute;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  gap: 1vw;
+  grid-auto-flow: dense;
+  
 }
