--- a/packages/renderer/src/view/components/Topbar/Topbar.css
+++ b/packages/renderer/src/view/components/Topbar/Topbar.css
@@ -7,6 +7,16 @@
     border-color: #c4c4c6;
     border-width: 0 0 1px 0;
     border-style: solid;
+    text-align: center;
+    align-items: center;
+    padding: 0 15px 0 15px;
+    box-sizing: border-box;
+    justify-content: space-between;
+    position: relative;
+}
+
+.Topbar .user-info {
+    font-size: 1rem;
 }
 
 .app-logo {
