--- a/packages/renderer/src/view/pages/HomePage/HomePage.css
+++ b/packages/renderer/src/view/pages/HomePage/HomePage.css
@@ -1,4 +1,3 @@
-
 .home-page {
   width: 100vw;
   height: 100vh;
@@ -6,6 +5,7 @@
   display: flex;
   position: absolute;
   flex-basis: 100%;
+  user-select: none;
 }
 
 
@@ -14,14 +14,20 @@
   flex-direction: column;
   flex-grow: 1;
   position: relative;
-  
+  box-sizing: border-box;
 }
 
 
 .catalog-header {
   padding: 5px 0 5px 15px;
-  font-weight: 200;
-  font-size: 1rem;
+}
+
+.catalog-header h3 {
+  width: fit-content;
+  font-weight: 300;
+  font-size: 1.7rem;
+  pointer-events: none;
+
 }
 
 .catalog-wrapper {
@@ -29,7 +35,6 @@
   position: relative;
   overflow: auto;
   margin-bottom: 25px;
-
 }
 
 .catalog-container {
@@ -40,4 +45,6 @@
   width: 100%;
   gap: 15px;
   justify-content: center;
+  padding: 0 2vw 0 2vw;
+  box-sizing: border-box;
 }
