--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -9,8 +9,26 @@ body {
 
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #F2F2F2;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #C9C9C9;
+    border-radius: 10px;
+}
