--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -29,6 +29,6 @@ h6 {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #C9C9C9;
+    background-color: #adacacbf;
     border-radius: 10px;
 }
