--- a/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
+++ b/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
@@ -1,24 +1,3 @@
-.library-page {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(255, 255, 255);
-  display: flex;
-  position: absolute;
-  flex-basis: 100%;
-  user-select: none;
-}
-
-
-.main-container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  position: relative;
-  box-sizing: border-box;
-
-}
-
-
 .catalog-header {
   padding: 5px 0 5px 15px;
   box-shadow: inset -20px -7px 20px 4px rgb(0 0 0 / 6%);
@@ -40,13 +19,11 @@
 
 .catalog-container {
   display: flex;
-  height: 100%;
   flex-wrap: wrap;
   position: absolute;
   width: 100%;
   gap: 15px;
   justify-content: center;
-  padding: 3vh 2vw 0 2vw;
+  padding: 3vh 2vw 6vh 2vw;
   box-sizing: border-box;
-  padding-bottom: 100px;
 }
