--- a/packages/renderer/src/view/pages/LoginPage/LoginPage.css
+++ b/packages/renderer/src/view/pages/LoginPage/LoginPage.css
@@ -1,11 +1,14 @@
 .modal-bg {
-    width: 100vw;
-    height: 100vh;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background-color: #fbfbfd;
     position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 
@@ -28,24 +31,27 @@
 
 
 
-.modalContent .header svg  {
+.modalContent .header svg {
     animation: grow-shrink 2s ease-in-out infinite;
-  }
-  
-  @keyframes grow-shrink {
+}
+
+@keyframes grow-shrink {
     0% {
-      transform: scale(1);
+        transform: scale(1);
     }
+
     25% {
         transform: scale(1.2);
-      }
+    }
+
     50% {
-      transform: scale(1.1);
+        transform: scale(1.1);
     }
+
     100% {
-      transform: scale(1);
+        transform: scale(1);
     }
-  }
+}
 
 .modalContent {
     display: flex;
@@ -55,7 +61,6 @@
     min-height: 55vh;
     border-radius: 25px;
     background-color: #fff;
-    -webkit-box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.03);
     box-shadow: 0 11px 34px 0 rgb(0 0 0 / 20%);
     padding: 10px;
 }
@@ -101,7 +106,7 @@
     text-align: center;
     font-size: 0.9rem;
     gap: 7px;
-    
+
 }
 
 .footer .body {
@@ -131,22 +136,30 @@
 
 
 #open-span {
-    display: inline-block; /* Display as inline-block */
+    display: inline-block;
+    /* Display as inline-block */
     animation: open 0.3s ease-in-out;
     font-size: 1.1rem;
     border-bottom: 1px solid;
     cursor: pointer;
 
-  }
+}
 
-  @keyframes open {
-    0% { transform: translateX(-10px); opacity: 0; }
-    100% { transform: translateX(0); opacity: 1; }
-  }
+@keyframes open {
+    0% {
+        transform: translateX(-10px);
+        opacity: 0;
+    }
 
-  
-  /* Define the hover animation for the span */
-  #open-span:hover {
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
+/* Define the hover animation for the span */
+#open-span:hover {
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out;
-  }
+}
