--- a/packages/renderer/src/view/components/Topbar/Topbar.css
+++ b/packages/renderer/src/view/components/Topbar/Topbar.css
@@ -1,15 +1,14 @@
 .topbar {
-    height: 50px;
     width: 100%;
-    background-color: #F8FAFB;
+    background-color: #ededed;;
     z-index: 1;
     display: flex;
     border-color: #c4c4c6;
-    border-width: 0 0 1px 0;
+    border-width: 0 0 0.5px 0;
     border-style: solid;
     text-align: center;
     align-items: center;
-    padding: 0 15px 0 15px;
+    padding: 4px 15px 3px 15px;
     box-sizing: border-box;
     justify-content: space-between;
     position: relative;
