--- a/packages/renderer/src/view/pages/HomePage/HomePage.css
+++ b/packages/renderer/src/view/pages/HomePage/HomePage.css
@@ -1,3 +1,12 @@
-.home-page {
-    
-}
+.catalog-header {
+    padding: 5px 0 5px 15px;
+    box-shadow: inset -20px -7px 20px 4px rgb(0 0 0 / 6%);
+  }
+  
+  .catalog-header h3 {
+    width: 100%;
+    font-weight: 300;
+    font-size: 1.7rem;
+    pointer-events: none;
+  }
+  
