--- a/packages/renderer/src/view/components/BookInfo/BookInfo.css
+++ b/packages/renderer/src/view/components/BookInfo/BookInfo.css
@@ -1,6 +1,5 @@
 .book-info-modal-bg {
-    position: absolute;
-    z-index: 1;
+    top: 0;
     left: 0;
     top: 0;
     width: 100%;
@@ -10,28 +9,31 @@
     backdrop-filter: blur(2px);
     position: fixed;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    z-index: 3;
 }
 
 .modal-content {
-    width: 80%;
-    position: absolute;
-    height: 80%;
-    border-radius: 12px;
-    background-color: rgb(231, 219, 219);
+    position: fixed;
+    width: 90%;
+    height: 79%;
+    border-radius: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgb(225, 222, 222);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 30px;
-    display: flex;
     justify-content: center;
     text-align: center;
     flex-direction: column;
     padding: 2.5vw;
-    z-index: 10;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    z-index: 4;
 }
 
+
+
+.modal-toolbar {
+    padding: 10px;
+}
 
 .close {
     color: #aaaaaa;
