--- a/packages/renderer/src/view/components/BookInfo/BookInfo.css
+++ b/packages/renderer/src/view/components/BookInfo/BookInfo.css
@@ -4,7 +4,6 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(2px);
     position: fixed;
@@ -28,54 +27,74 @@
     z-index: 4;
 }
 
+
+
 .modal-header {
     position: relative;
+    justify-content: center;
+    display: flex;
+    padding: 0 25px 0px 10px;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    align-self: center;
     height: 5%;
+    min-height: 35px;
     padding-right: 10px;
+    border-bottom: 0.1px rgb(147, 146, 146) solid;
 }
 
-.modal-body {
-    height: 80%;
+
+.modal-header .breadcrumb {
+    font-weight: 200;
+    font-size: 15px;
+}
+
+
+.modal-content .modal-body {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 95%;
     justify-content: start;
+    overflow: scroll;
 }
 
 
-.modal-body .book-cover {
+.modal-content .modal-body .book-cover {
+    display: flex;
+    flex-direction: column;
     position: relative;
     height: 20%;
+    width: 100%;
+    box-shadow: 0 3px 5px 1px rgba(0, 0, 0, 0.16);
 }
 
-.book-cover img {
+.modal-content .book-cover #cover-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.modal-content .book-thumbnail {
-    position: relative;
-    height: 15%;
-}
-.modal-content .book-thumbnail img {
+
+.modal-content #thumb-img {
     position: absolute;
-    top: -60%;
     left: 5%;
-    width: 150px;
-    height: 150px;
+    top: 60%;
+    min-width: 100px;
+    min-height: 100px;
+    width: 10vw;
+    height: 15vh;
     border-radius: 50%;
-    border: 5px solid #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 3px 15px 3px rgba(0, 0, 0, 0.5);
 }
 
-.modal-footer {
-    height: 15%;
-
-    position: relative;
+.modal-body .book-thumbnail {
+    min-height: 12vh;
 }
 
 
-
-.close {
+.modal-body .close {
     color: #aaaaaa;
-    float: right;
     font-size: 28px;
     font-weight: bold;
 }
@@ -84,5 +103,97 @@
 .close:focus {
     color: #000;
     text-decoration: none;
+    cursor: pointer;
+}
+
+
+.modal-content .info-box {
+    height: auto;
+    width: 100%;
+}
+
+
+.info-box h3 {
+    font-weight: 100;
+    font-size: 5vmin;
+    display: flex;
+    height: fit-content;
+    margin: 0 0 0 5%;
+}
+
+
+.info-text {
+    display: flex;
+    margin-top: 1.2%;
+    margin-left: 6%;
+    flex-direction: column;
+    text-align: left;
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.info-text p {
+    margin: 0;
+    padding: 10px;
+    font-weight: 400;
+    font-size: 1.1rem;
+}
+
+.info-text span {
+    margin: 0;
+    padding: 10px;
+    font-size: 1.05rem;
+    font-weight: 300;
+}
+
+.modal-body .razor {
+    width: 35vw;
+    box-shadow: 0 0.1px 0 rgb(116, 112, 112);
+    border-radius: 10px;
+    border-bottom: 1px solid rgba(150, 147, 147, 0.432);
+    margin: 0;
+}
+
+.razor-wrapper {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.book-table {
+    position: relative;
+    width:90%;
+    align-items: center;
+    margin: auto;
+    
+}
+
+
+table td{
+}
+.book-table th {
+    border-bottom: 1px rgb(2, 2, 2) solid;
+} 
+
+.table-toolbar {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+    gap: 5;
+    font-size: 0.9rem;
+}
+
+.table-toolbar h3 {
+    font-weight: 200;
+    font-size: 1.6rem;
+    text-shadow: 3px 4px 5px  rgba(90, 90, 90, 0.397);
+    padding-bottom: 0.5rem; /* set a smaller value for padding-bottom */
+    border-bottom: 1px solid #ccc;
+  }
+
+.table-toolbar h3:hover {
+    font-weight: 300;
+    font-size: 1.6rem;
+    font-style: underline;
     cursor: pointer;
 }
