add styling and code cleanup

--- a/packages/renderer/src/view/components/BooksCatalog/BooksCatalog.css
+++ b/packages/renderer/src/view/components/BooksCatalog/BooksCatalog.css
@@ -1,17 +1,12 @@
-import BookCatalogItem from "../components/BookCatalogItem/BookCatalogItem";
+.catalog-container {
+  display: flex;
+  flex-wrap: wrap;
+  position: absolute;
+  width: 100%;
+  gap: 15px;
+  justify-content: center;
+  padding: 4vh 3vw 6vh 3vw;
+  box-sizing: border-box;
+    text-shadow: 3px 4px 5px  rgba(90, 90, 90, 0.281);
 
-function BookCatalog({ books, thumbnails, onBookClick }) {
-  const bookCatalog = books.map(({ title, asin }, index) => (
-    <BookCatalogItem
-      key={index}
-      title={title}
-      thumbnail={thumbnails[asin]}
-      metadata={asin}
-      onClick={() => onBookClick(asin)}
-    />
-  ));
-
-  return <div className="catalog-container">{bookCatalog}</div>;
 }
-
-export default BookCatalog;
