--- a/packages/renderer/src/view/pages/HomePage/HomePage.css
+++ b/packages/renderer/src/view/pages/HomePage/HomePage.css
@@ -10,16 +10,20 @@
   font-weight: 300;
   font-size: 1.7rem;
   text-shadow: 3px 4px 5px  rgba(90, 90, 90, 0.281);
+  margin: 0;
   margin-bottom: 0;
 }
 
 
 .homepage-header {
   display: flex;
-  flex-direction: column;
-  padding: 0px 0 20px 15px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin:0;
   box-shadow: inset -20px -7px 20px 4px rgb(0 0 0 / 6%);
-  
+  height: 10%;
+  padding: 25px 0 25px 15px;
 }
 
 
@@ -30,11 +34,10 @@
   width: 100%;
   justify-content: center;
   align-items: center;
+    padding: 25px 0 25px 15px;
+
   box-shadow: inset -20px -7px 20px 4px rgba(0, 0, 0, 0.021);
-
 }
-
-
 
 
 
@@ -44,20 +47,18 @@
   gap: 15%;
   justify-content: center;
   position: relative;
-  padding: 1% 0 1% 0;
   width: 100%;
 
 }
 
 .dashboard-value span {
   font-weight: 300;
-  font-size: 2.5vmin;
+  font-size: 1.1rem;
 }
 
 
 .dashboard-value {
   display: flex;
-  font-size: 1.2rem;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -67,35 +68,27 @@
 }
 
 .dashboard-razor {
-  width: 5vw;
+  width: 3vw;
   margin: 0;
   box-shadow: 0 0.1px 0 rgb(116, 112, 112);
   border-bottom: 0.1px solid rgb(150, 147, 147);
 }
 
-
-.homepage-razor {
-  width: 55%;
-  margin: 0;
-  box-shadow: 0 0.1px 0 rgb(116, 112, 112);
-  border-bottom: 0.1px solid rgb(150, 147, 147);
-}
 
 .previous-session-header {
   display: flex;
   justify-content: left;
   align-items: left;
   text-align: left;
+  
 }
 
 .previous-session {
   width: 100%;
   height: 100%;
-
 }
 
 .previous-session-header h3 {
-  padding: 5px 0 5px 15px;
   font-size: 1.5rem;
 }
 
@@ -110,7 +103,6 @@
 
 .choose-table-buttons h3 {
   font-size: 1.3rem;
-  padding-bottom: 0.5rem; 
   border-bottom: 1px solid #ccc;
   cursor: pointer;
 }
