--- a/packages/renderer/src/App.css
+++ b/packages/renderer/src/App.css
@@ -13,7 +13,25 @@
     flex-grow: 1;
     box-sizing: border-box;
 }
+
 /* 
 * {
-    border: 0.5px solid rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
   } */
+
+/* html {
+    filter: invert(100%);
+}
+*  {
+    box-shadow: none !important; 
+    text-shadow: none;
+
+}
+
+
+img,
+picture,
+video {
+    filter: invert(1)
+}
+ */
