--- a/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
+++ b/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
@@ -1,29 +1,52 @@
 .catalog-header {
-  padding: 5px 0 5px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  margin:0;
   box-shadow: inset -20px -7px 20px 4px rgb(0 0 0 / 6%);
+  height: 10%;
+  padding: 25px 0 25px 15px;
+  text-shadow: 3px 4px 5px  rgba(90, 90, 90, 0.281);
+
 }
 
 .catalog-header h3 {
   width: 100%;
+  margin: 0;
   font-weight: 300;
   font-size: 1.7rem;
   pointer-events: none;
+  
 }
 
 .catalog-wrapper {
   height: 100%;
   position: relative;
   overflow: auto;
-  box-shadow: inset -20px -7px 20px 4px rgb(0 0 0 / 6%);
+    text-shadow: 3px 4px 5px  rgba(90, 90, 90, 0.281);
+
 }
 
-.catalog-container {
-  display: flex;
-  flex-wrap: wrap;
-  position: absolute;
-  width: 100%;
-  gap: 15px;
-  justify-content: center;
-  padding: 4vh 3vw 6vh 3vw;
-  box-sizing: border-box;
+/*  Export */ 
+input[type="text"] {
+  background-color: #e6e6e6;
+  border: none;
+  border-radius: 8px;
+  color: #000;
+  font-size: 16px;
+  font-weight: 300;
+  padding: 12px 16px;
+  width: 15vw;
+  height: 1.5vh;
+}
+ 
+input[type="text"]::placeholder {
+  color: #999;
+  font-size: 16px;
+  font-weight: 400;
+}
+ 
+input[type="text"]:focus {
+  outline: none;
 }
