--- a/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
+++ b/packages/renderer/src/view/pages/LibraryPage/LibraryPage.css
@@ -43,7 +43,7 @@ input[type="text"] {
  
 input[type="text"]::placeholder {
   color: #999;
-  font-size: 16px;
+  font-size: 0.8rem;
   font-weight: 400;
 }
  
