--- a/packages/renderer/src/view/components/Topbar/Topbar.css
+++ b/packages/renderer/src/view/components/Topbar/Topbar.css
@@ -1,6 +1,6 @@
 .topbar {
     width: 100%;
-    background-color: #ededed;;
+    background-color: #E3E3E3;
     z-index: 1;
     display: flex;
     border-color: #c4c4c6;
