--- a/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
+++ b/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
@@ -1,4 +1,4 @@
-.book-preview-item {
+/* .book-preview-item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,96 +16,3 @@
 }
 
 
-.book-preview-item:hover img {
-    transform: translateY(-5px);
-}
-
-
-@keyframes item-flip-in {
-    0% {
-        opacity: 0;
-        transform: translateZ(-100px) rotateY(90deg);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateZ(0) rotateY(0);
-    }
-}
-
-.book-preview-item img {
-    width: 5vw;
-    height: 10vh;
-    min-width: 75px;
-    min-height: 100px;
-    margin-bottom: 10px;
-    box-shadow: 1px 6px 25px 1px rgba(0, 0, 0, 0.324);
-}
-
-.book-preview-item.book-thumbnail {
-    display: flex;
-    justify-content: center;
-    border-bottom: 1px solid #ccc;
-    width: 100%;
-}
-
-.book-preview-item .book-title {
-    margin: 8px 0 0px 0;
-}
-
-
-
-
-/* consider exporting as var */
-.book-preview-item .book-title h6 {
-    font-size: 1.1rem;
-    margin: 0;
-    width: 15vw;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    margin-bottom: 5px;
-    font-weight: 400;
-}
-
-.book-preview-item .book-info {
-    display: flex;
-    flex-direction: row;
-    gap: 1vw;
-}
-
-.book-preview-item span {
-    align-items: center;
-    font-size: 1rem;
-    margin: 0;
-    text-align: center;
-    font-weight: 300;
-    color: black;
-}
-
-.missing-thumbnail-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 5vw;
-    height: 10vh;
-    min-width: 75px;
-    min-height: 100px;
-    margin-bottom: 10px;
-
-}
-
-.missing-thumbnail {
-    width: 60px;
-    height: 60px;
-    border-radius: 60%;
-    background-color: #ddd;
-    color: #fff;
-    line-height: 60px;
-    font-size: 24px;
-    box-shadow: 1px 0px 10px 3px rgba(59, 59, 59, 0.09);
-}
-
-.book-preview-item:hover .missing-thumbnail {
-    transform: translateY(-5px);
-} 
