--- a/packages/renderer/src/view/components/BooksCatalog/BooksCatalog.css
+++ b/packages/renderer/src/view/components/BooksCatalog/BooksCatalog.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   position: absolute;
-  padding: 2vh 2vw 2vw 2vw;
+  padding: 2vh 11px 2vw 11px;
   gap: 1vw;
   justify-content: center;
   box-sizing: border-box;
