--- a/packages/renderer/src/view/components/BookCatalogItem/BookCatalogItem.css
+++ b/packages/renderer/src/view/components/BookCatalogItem/BookCatalogItem.css
@@ -16,6 +16,11 @@
     cursor: pointer;
 }
 
+.book-preview-item:hover {
+    box-shadow: inset 1px 2px 20px 2px rgba(124, 124, 124, 0.123), 1px 2px 20px 2px rgba(0, 0, 0, 0.097);
+
+}
+
 .book-preview-item:hover img {
     transform: translateY(-4px);
 }
