--- a/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
+++ b/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
@@ -1,4 +1,4 @@
-/* .book-preview-item {
+.word-preview-item {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,3 +16,8 @@
 }
 
 
+.word-preview-item:hover {
+    transform: translateY(4px);
+    box-shadow: 1px 6px 25px 1px rgba(0, 0, 0, 0.192);
+
+}
