--- a/packages/renderer/src/view/components/ModalHeader/ModalHeader.css
+++ b/packages/renderer/src/view/components/ModalHeader/ModalHeader.css
@@ -10,15 +10,13 @@
     height: 5%;
     min-height: 35px;
     padding-right: 10px;
-    border-bottom: 0.1px rgb(147, 146, 146) solid;
+    border-bottom: 1px rgba(147, 146, 146, 0.623) solid;
 }
-
 
 .modal-header .breadcrumb {
     font-weight: 200;
     font-size: 15px;
 }
-
 
 .close {
     color: #aaaaaa;
@@ -26,8 +24,7 @@
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover {
     color: #000;
     text-decoration: none;
     cursor: pointer;
