--- a/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
+++ b/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
@@ -1,5 +1,3 @@
-
-
 .word-modal-content {
     position: fixed;
     width: 65%;
@@ -13,17 +11,86 @@
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    z-index: 4;
+    z-index: 5;
+    overflow: hidden;
 }
 
+.word-modal-content .word-modal-body::-webkit-scrollbar {
+    display: none;
+}
 
-
-
-.modal-content .modal-body {
+.word-modal-content .word-modal-body {
     position: relative;
     display: flex;
     flex-direction: column;
     height: 95%;
     justify-content: start;
-    overflow: scroll;
+    overflow-y: scroll;
+}
+
+.word-modal-body .header {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 20px 0 15px;
+}
+
+.word-modal-body .header h3 {
+    font-size: 2.3rem;
+}
+
+.word-modal-body .header .button-group {
+    display: flex;
+    gap: 15px;
+    padding-left: 2px;
+}
+
+.word-modal-body .header .button-group svg {
+    width: 50px;
+    height: 50px;
+    margin: 0;
+}
+
+.word-modal-body .header .button-group svg:hover {
+    cursor: pointer;
+    box-shadow: inset 5px 0 0 20px rgba(0, 0, 0, 0.11);
+    border-radius: 50%;
+}
+
+.word-modal-body .body {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.word-info {
+    display: flex;
+    gap: 1.2vh;
+    margin-top: 1%;
+    flex-direction: column;
+    text-align: left;
+    font-weight: 300;
+    padding: 3px 0 5px 25px;
+}
+
+.word-info p {
+    margin: 0;
+    font-weight: 400;
+    font-size: 0.98rem;
+}
+
+.word-info span {
+    padding-left: 8px;
+    font-size: 1.05rem;
+    font-weight: 300;
+}
+
+.word-modal-body .word-table {
+    align-items: left;
+    padding: 0 10px 0 10px;
+}
+
+.word-modal-body .body h4 {
+    font-weight: 300;
+    padding: 25px 0 15px 25px;
+    margin: 0;
 }
