--- a/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
+++ b/packages/renderer/src/view/components/WordCatalogItem/WordCatalogItem.css
@@ -8,16 +8,21 @@
     border-radius: 5px;
     width: 15vw;
     min-height: 5vh;
+    justify-content: center;
     box-shadow: 1px 6px 25px 1px rgba(0, 0, 0, 0.097);
     transform-style: preserve-3d;
     animation: item-flip-in 0.2s ease-in-out forwards;
     opacity: 0;
     cursor: pointer;
+    font-size: 1.3rem;
 }
 
 
 .word-preview-item:hover {
-    transform: translateY(4px);
     box-shadow: 1px 6px 25px 1px rgba(0, 0, 0, 0.192);
+}
+
+.word-preview-item:hover span {
+    transform: translateY(-2px);
 
 }
