--- a/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
+++ b/packages/renderer/src/view/components/WordInfoModal/WordInfoModal.css
@@ -36,6 +36,8 @@
 
 .word-modal-body .header h3 {
     font-size: 2.3rem;
+    font-weight: 300;
+    margin: 0;
 }
 
 .word-modal-body .header .button-group {
