--- a/packages/renderer/src/view/components/Dropdown/Dropdown.css
+++ b/packages/renderer/src/view/components/Dropdown/Dropdown.css
@@ -1,43 +1,41 @@
 .dropdown-container {
     position: relative;
     display: inline-block;
-  }
-  
-  .dropdown-toggle {
-    background-color: #F6F6F6;
+}
+
+.dropdown-toggle {
+    background-color: #f6f6f6;
     color: #333;
     border: 1px solid #ccc;
     padding: 6px 15px;
     font-size: 1.05rem;
     cursor: pointer;
     border-radius: 9px;
-  }
-  
-  .dropdown-content {
-    display: none;
+}
+
+.dropdown-content {
+    display: block;
     position: absolute;
     z-index: 1;
     top: 100%;
-    left: 15%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 125px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-top: none;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  }
-  
-  .dropdown-content.open {
-    display: block;
-  }
-  
-  .dropdown-content a {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-content a {
+    display: flex;
+    justify-content: center;
     color: #333;
     padding: 8px 30px;
     text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #f5f5f5;
-  }
-  
+    justify-content: center;
+}
 
+.dropdown-content a:hover {
+    background-color: #f5f5f5;
+}
